tests/error/misc_errors/default_arg.err
Error: Unsupported (at $FILE:5:26)
  | 
3 | 
4 | @compile_guppy
5 | def foo(x: int, y: bool = True) -> int:
  |                           ^^^^ Default arguments are not supported

Guppy compilation failed due to 1 previous error
